Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
 
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     min-height: 400px;
     background-image: url(big.jpg);
@@ -14,17 +18,17 @@ body {
     height: 100vh;
 }
 
-/* .container {
+.container {
     width: 80%;
-    margin: auto;
+    /* margin: auto; */
     overflow: hidden;
-} */
+}
 
 header {
     background-image: linear-gradient(to bottom right, #90d5e3, #ffdfa8);
     border-top: 5px solid #111;
     min-height: 70px;
-    padding: 5px 0;
+    
     
 } 
 h1 {
@@ -33,10 +37,9 @@ h1 {
     letter-spacing: 50px;
     font-size: 100px;
     text-align: center;
-    
-}
+    }
 
-ul{
+  ul{
  list-style-type: none;
     margin: 0;
     padding: 0;
@@ -70,14 +73,16 @@ li a:hover {
 
 img { 
     position: absolute;
-    top: 260px;
-    left: 150px;
+    top: 210px;
+    left: 350px;
     z-index: 1;
+    height: 600px;
+    width: 400px;
 }
 
 p {
     position: relative;
-    top: 350px;
+    top: 300px;
     font-family: 'Bungee Shade', cursive;
     font-size: 50px;
     color: white;
@@ -87,8 +92,8 @@ p {
  .sidebar {
     border-radius: 8px;
     position: absolute;
-    left: 1300px;
-    top: 600px;
+    left: 1200px;
+    top: 400px;
     margin-right: 100px;
     padding: 20px;
     background-color: rgba(88, 94, 95, 0.7);
@@ -109,14 +114,13 @@ p {
     background-color: #849d81;
     color: white;
 }
-
-#form input{
+ input{
     font-size: 20px;
     width: 50%;
     padding: 5px;
 }
 
-#form textarea {
+ textarea {
     font-size: 20px;
     width: 50%;
     padding: 5px;
